# ugc-service-2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/apps/auth/: .env.example  README.md  alembic.ini  pyproject.toml
backend/apps/auth/migrations/: env.py
backend/apps/auth/migrations/versions/: 23c76cecfd4d_add_permission_type.py  6a58b42ff86b_create_social_accounts.py  71f7df0414f9_initial.py  ec08fc185d67_users_on_delete_cascade.py
backend/apps/auth/src/: __init__.py  main.py
backend/apps/auth/src/auth/: dependencies.py  exceptions.py  schemas.py
backend/apps/auth/src/auth/api/v1/: router.py
backend/apps/auth/src/auth/jwt/: backend.py  exceptions.py  schemas.py  service.py  storage.py  utils.py
backend/apps/auth/src/cli/: database.py  main.py  messages.py  superuser.py
backend/apps/auth/src/common/: cache.py  database.py  dependencies.py  exceptions.py  models.py  schemas.py  utils.py
backend/apps/auth/src/permissions/: dependencies.py  enums.py  exceptions.py  models.py  repositories.py  schemas.py  services.py
backend/apps/auth/src/permissions/api/v1/: router.py
backend/apps/auth/src/settings/: app.py  db.py  logging.py  rate_limiter.py  service.py  social.py
backend/apps/auth/src/social/: auth.py  client.py  exceptions.py  models.py  providers.py  repositories.py  schemas.py  services.py
backend/apps/auth/src/social/api/v1/: router.py
backend/apps/auth/src/tracer/: config.py
backend/apps/auth/src/users/: dependencies.py  exceptions.py  models.py  repositories.py  schemas.py  service.py  settings.py  utils.py
backend/apps/auth/src/users/api/v1/: router.py
backend/apps/auth/tests/functional/: conftest.py
backend/apps/auth/tests/functional/src/auth/: test_auth.py  test_protected_endpoint.py
backend/apps/auth/tests/functional/src/cli/: test_create_superuser.py
backend/apps/auth/tests/functional/src/permissions/: test_api.py  test_repos.py
backend/apps/auth/tests/functional/src/users/: test_api.py  test_repos.py
backend/apps/etl_clickhouse/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  clickhouse.ddl  pyproject.toml
backend/apps/etl_clickhouse/src/: main.py
backend/apps/etl_clickhouse/src/buffer/: flush_buffer.py
backend/apps/etl_clickhouse/src/etl/: analytical_db.py  clickhouse_connection.py  run.py  topic_handler.py
backend/apps/etl_clickhouse/src/exceptions/: exception.py
backend/apps/etl_clickhouse/src/models/: base.py  view.py
backend/apps/etl_clickhouse/src/settings/: app.py  base.py  clickhouse.py  etl.py  kafka.py  logging.py
backend/apps/etl_clickhouse/src/utils/: write_pid.py
backend/apps/etl_elastic/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/apps/etl_elastic/configs/es_schemas/: es_genres_schema.json  es_persons_schema.json
backend/apps/etl_elastic/etl/: main.py
backend/apps/etl_elastic/etl/logic/backoff/: backoff.py
backend/apps/etl_elastic/etl/logic/elastic_search/: elastic_loader.py
backend/apps/etl_elastic/etl/logic/postgresql/: client.py  enrichers.py  mergers.py  producers.py  runner.py
backend/apps/etl_elastic/etl/logic/state/: state.py
backend/apps/etl_elastic/etl/logic/storage/: storage.py
backend/apps/etl_elastic/etl/logic/transformer/: dataclasses.py  transformers.py
backend/apps/etl_elastic/etl/settings/: settings.py
backend/apps/etl_sqlite/: .env.example  Dockerfile  README.md  pyproject.toml
backend/apps/etl_sqlite/sqlite_to_postgres/: load_data.py
backend/apps/etl_sqlite/sqlite_to_postgres/logic/: data_types.py  postgres_saver.py  sqlite_extractor.py
backend/apps/etl_sqlite/sqlite_to_postgres/settings/: settings.py
backend/apps/films_api/: .env.example  Dockerfile  README.md  pyproject.toml
backend/apps/films_api/nginx/: nginx.conf
backend/apps/films_api/src/: main.py
backend/apps/films_api/src/common/: authorization.py  clients.py  database.py  dependencies.py  exceptions.py  meta_info.py  models.py  permission.py  repository.py  schemas.py  utils.py
backend/apps/films_api/src/films/: dependencies.py  error_handling.py  exceptions.py  models.py  params.py  repository.py  schemas.py  service.py  settings.py
backend/apps/films_api/src/films/api/v1/: router.py
backend/apps/films_api/src/genres/: dependencies.py  exceptions.py  models.py  params.py  repository.py  schemas.py  service.py  settings.py
backend/apps/films_api/src/genres/api/v1/: router.py
backend/apps/films_api/src/persons/: dependencies.py  exceptions.py  models.py  params.py  repository.py  schemas.py  service.py  settings.py
backend/apps/films_api/src/persons/api/v1/: router.py
backend/apps/films_api/src/settings/: app.py  auth.py  base.py  db.py  jaeger.py  logging.py  service.py
backend/apps/films_api/src/tracer/: config.py
backend/apps/films_api/tests/functional/: conftest.py  settings.py
backend/apps/films_api/tests/functional/src/films/: test_films.py  test_films_detail.py  test_films_search.py
backend/apps/films_api/tests/functional/testdata/: es_movies_schema.json
backend/apps/movies_admin/: .env.example  Dockerfile  pyproject.toml  run.sh
backend/apps/movies_admin/app/config/: settings.py  urls.py
backend/apps/movies_admin/app/config/components/: application.py  authorization.py  database.py  internalization.py  logging.py
backend/apps/movies_admin/app/gunicorn/: gunicorn.py
backend/apps/movies_admin/app/movies/: admin.py  models.py
backend/apps/movies_admin/app/movies/migrations/: 0001_initial.py  0002_initial.py
backend/apps/movies_admin/app/user/: authorization.py  exceptions.py  models.py
backend/apps/movies_admin/app/user/migrations/: 0001_initial.py  0002_user_is_staff.py
backend/apps/movies_admin/nginx/: nginx.conf  site.conf
backend/research/clickhouse_vs_vertica/: clickhouse_cluster.yml  clickhouse_vs_vertica.ipynb  pyproject.toml  vertica_cluster.yml
backend/research/mongo_vs_all/: clickhouse_cluster.yml  mongo_cluster.yml  mongo_postgres_single_node.yml  mongo_test.ipynb  mongo_vs_clickhouse.ipynb  mongo_vs_postgres.ipynb  pyproject.toml
docker/: .dockerignore  (+5 more)
(+76 files in other folders)
