[tool.poetry]
name = "practicum"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clickhouse-driver = "^0.2.6"
ipython = "^8.16.1"
vertica-python = "^1.3.5"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
